// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component renders the danger button correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 py-2 rounded-xl text-white font-medium transition-all bg-gradient-to-r from-[#A54242] to-[#E66464] hover:opacity-80"
  >
    Danger Button
  </button>
</DocumentFragment>
`;

exports[`Button Component renders the default button correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 py-2 rounded-xl text-white font-medium transition-all bg-gradient-to-r from-[#3A5E72] to-[#5C93B1] hover:opacity-80"
  >
    Default Button
  </button>
</DocumentFragment>
`;

exports[`Button Component renders the primary button correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 py-2 rounded-xl text-white font-medium transition-all bg-gradient-to-r from-[#4B7A90] to-[#6AA8C8] hover:opacity-80"
  >
    Primary Button
  </button>
</DocumentFragment>
`;

exports[`Button Component renders the success button correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 py-2 rounded-xl text-white font-medium transition-all bg-gradient-to-r from-[#2D8659] to-[#4BBF87] hover:opacity-80"
  >
    Success Button
  </button>
</DocumentFragment>
`;

exports[`Button Component renders the warning button correctly 1`] = `
<DocumentFragment>
  <button
    class="px-4 py-2 rounded-xl text-white font-medium transition-all bg-gradient-to-r from-[#D0A24B] to-[#F2C977] hover:opacity-80"
  >
    Warning Button
  </button>
</DocumentFragment>
`;
